changed footer padding top

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     </div>
 </div>
 
-<div class="container my-5">
+<div class="container my-5 py-5">
     <!-- Footer -->
     <footer class="text-start text-lg-start text-white">
         <!-- Grid container -->
