adjusted genres dropdown border

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="d-flex">
             <h2 class="text-light">TV Shows</h2>
             <div class="dropdown">
-                <button class="btn btn-outline-light dropdown-toggle ms-4" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="btn btn-outline-light dropdown-toggle ms-4 rounded-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Genres
                 </button>
                 <ul class="dropdown-menu">
