--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-between align-middle" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="navbar-nav font-monospace fw-bold">
                 <a class="nav-link text-light" href="#">Home</a>
                 <a class="nav-link text-light active" aria-current="true" href="#">TV Shows</a>
                 <a class="nav-link text-light" href="#">Movies</a>
@@ -273,7 +273,7 @@
 
             <section class="">
             <!--Grid row-->
-            <div class="row my-3">
+            <div class="row my-3 font-monospace fw-bold">
 
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
