added cards md breakpoint

--- a/index.html
+++ b/index.html
@@ -89,42 +89,42 @@
    <div class="container-fluid mb-4 mt-4">
     <h3 class="text-light mb-4">Trending now</h3>
     <div class="row g-1">
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media0.webp" class="card-img rounded-0" alt="...">
                 </a>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media1.jpg" class="card-img rounded-0" alt="...">
                 </a>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media2.webp" class="card-img rounded-0" alt="...">
                 </a>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media3.webp" class="card-img rounded-0" alt="...">
                 </a>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media4.jpg" class="card-img rounded-0" alt="...">
                 </a>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media5.webp" class="card-img rounded-0" alt="...">
@@ -137,42 +137,42 @@
    <div class="container-fluid mb-4 mt-4">
     <h3 class="text-light mb-4">Watch it again</h3>
     <div class="row g-1">
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media7.webp" class="card-img  rounded-0" alt="...">
                 </a>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media8.webp" class="card-img rounded-0" alt="...">
                 </a>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media9.jpg" class="card-img rounded-0" alt="...">
                 </a>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media10.jpg" class="card-img rounded-0" alt="...">
                 </a>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media11.jpg" class="card-img  rounded-0" alt="...">
                 </a>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media12.jpg" class="card-img rounded-0" alt="...">
@@ -187,42 +187,42 @@
    <div class="container-fluid mb-5 mt-4">
     <h3 class="text-light mb-4">New releases</h3>
     <div class="row g-1">
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media14.webp" class="card-img  rounded-0" alt="...">
                 </a>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media15.jpg" class="card-img rounded-0" alt="...">
                 </a>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media16.webp" class="card-img rounded-0" alt="...">
                 </a>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media17.jpg" class="card-img rounded-0" alt="...">
                 </a>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                 <img src="./assets/media/media18.jpg" class="card-img  rounded-0" alt="...">
                 </a>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-6">
             <div class="card border border-0">
                 <a href="#">
                     <img src="./assets/media/media19.webp" class="card-img rounded-0" alt="...">
