--- a/profile.html
+++ b/profile.html
@@ -8,11 +8,96 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css%22%3E">
     <link rel="stylesheet" href="./css/style.css">
   </head>
-  <body>
+  <body class="bg-dark">
     
-    <div class="container-fluid w-50 bg-dark">
+    <div class="container-fluid w-50 pt-5">
 
+      <h1 class="font-monospace border-bottom-1 text-light mt-5">Edit Profile</h1>
+
+      <hr class="hr text-light w-75">
+
+      <div class="row">
+
+        <div class="col-lg-3 px-0">
+          <img src="./assets/avatar.png" width="170" height="170">
+        </div>
+
+        <div class="col-lg-6">
+
+          <!--Input nome-->
+          <div>
+            <input class="bg-secondary text-light w-100 h-25 pb-2 mb-5" label="Name">
+          </div>
+
+          <!--lingua-->
+          <div>
+            <h3 class="text-secondary">Lingua:</h3>
+            <div class="btn-group w-25">
+              <button class="btn btn-outline-light dropdown-toggle rounded-0 mb-2" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Italiano
+              </button>
+              <ul class="dropdown-menu bg-dark opacity 0.25">
+                <li><a class="dropdown-item text-light" href="#">Francese</a></li>
+                <li><a class="dropdown-item text-light" href="#">Inglese</a></li>
+                <li><a class="dropdown-item active text-light" href="#">Italiano</a></li>
+                <li><a class="dropdown-item text-light" href="#">Portoghese</a></li>
+                <li><a class="dropdown-item text-light" href="#">Spagnolo</a></li>
+                <li><a class="dropdown-item text-light" href="#">tedesco</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <hr class="hr text-light w-75">
+
+          <!--Maturity settings-->
+          <div>
+            <h3 class="text-secondary py-2">Maturity Settings:</h3>
+            <button type="button" class="btn btn-secondary py-2">ALL MATURITY RATINGS</button>
+            <p class="text-light py-2">Show titles of <span>all maturity ratings</span> for this profile</p>
+            <button type="button" class="btn btn-outline-light py-1 px-4 my-3 rounded-0">EDIT</button>
+          </div>
+
+          <hr class="hr text-light w-75">
+
+          <!--Autoplay controls-->
+          <div>
+            <h3 class="text-secondary py-2">Autoplay controls</h3>
+
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <label class="form-check-label text-light" for="flexCheckDefault">
+                Autoplay next episode in a series on all devices.
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+              <label class="form-check-label text-light" for="flexCheckChecked">
+                Autoplay previews while browsing on all devices.
+              </label>
+            </div>
+          </div>
+
+        </div>
+
+      <hr class="hr text-light w-75 my-4">
+
+
+      <!--save & other buttons-->
+      <div class="row w-75">
+        <div class="col-lg-4 g-0">
+          <button type="button" class="btn btn-outline-light py-2 px-4 my-3 rounded-0 fs-5">SAVE</button>
+        </div>
+        <div class="col-lg-4 g-0">
+          <button type="button" class="btn btn-outline-light py-2 px-4 my-3 rounded-0 fs-5">CANCEL</button>
+        </div>
+        <div class="col-lg-4 g-0">
+          <button type="button" class="btn btn-outline-light py-2 px-4 my-3 rounded-0 fs-5">DELETE PROFILE</button>
+        </div>
+      </div>
+
+      </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
