--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid p-0">
           <a class="navbar-brand" href="#">
-            <img src="./assets/netflix_logo.png" alt="Netflix" width="95" height="35">
+            <img src="./assets/netflix_logo.png" alt="Netflix" width="95" height="50">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
                       <img src="./assets/avatar.png" width="16" height="16">
                     </button>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Profile</a></li>
+                      <li><a class="dropdown-item" href="./profile.html">Profile</a></li>
                       <li><a class="dropdown-item" href="#">Settings</a></li>
                       <li><a class="dropdown-item" href="#">Log Out</a></li>
                     </ul>
