--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css%22%3E">
     <link rel="stylesheet" href="./css/style.css">
   </head>
-  <body>
+  <body class="bg-dark">
     
-   <div class="container-fluid bg-dark">
+   <div class="container-fluid">
     <!--navbar-->
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid p-0">
@@ -44,7 +44,7 @@
                     <button class="btn btn-outline-light border border-0 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       <img src="./assets/avatar.png" width="16" height="16">
                     </button>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu dropdown-menu-end">
                       <li><a class="dropdown-item" href="./profile.html">Profile</a></li>
                       <li><a class="dropdown-item" href="#">Settings</a></li>
                       <li><a class="dropdown-item" href="#">Log Out</a></li>
@@ -233,11 +233,11 @@
     </div>
 </div>
 
-<div class="container my-5 py-5">
+<div class="container mt-5 pt-5">
     <!-- Footer -->
     <footer class="text-start text-lg-start text-white">
         <!-- Grid container -->
-        <div class="container p-5 pb-3">
+        <div class="container px-5 pt-5">
             <!-- Section: Links -->
             <!-- Section: Social media -->
             <section class="text-start">
